terratest/test/examples/ingress-annotation-rr.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    k8gb.io/strategy: roundRobin
    k8gb.io/dns-ttl-seconds: "5"
  name: test-gslb-annotation
spec:
  rules:
  - host: ingress-rr-notfound.cloud.example.com
    http:
      paths:
      - backend:
          serviceName: non-existing-app
          servicePort: http
        path: /
  - host: ingress-rr-unhealthy.cloud.example.com
    http:
      paths:
      - backend:
          serviceName: unhealthy-app
          servicePort: http
        path: /
  - host: ingress-roundrobin.cloud.example.com
    http:
      paths:
      - backend:
          serviceName: frontend-podinfo
          servicePort: http
        path: /
